# gtsam

./: .gitignore  CMakeLists.txt  MODULE.bazel  README-BAZEL.md
CppUnitLite/: Test.h
cmake/: GtsamTesting.cmake  HandleCephes.cmake  HandleGeneralOptions.cmake  HandleGlobalBuildFlags.cmake
examples/: CameraResectioning.cpp  CombinedImuFactorsExample.cpp  CreateSFMExampleData.cpp  DiscreteBayesNetExample.cpp  DiscreteBayesNet_FG.cpp  EssentialViewGraphExample.cpp  FisheyeExample.cpp  GNCExample.cpp  HMMExample.cpp  IMUKittiExampleGPS.cpp  ISAM2Example_SmartFactor.cpp  ImuFactorsExample.cpp  ImuFactorsExample2.cpp  InverseKinematicsExampleExpressions.cpp  LocalizationExample.cpp  METISOrderingExample.cpp  OdometryExample.cpp  PlanarSLAMExample.cpp  Pose2SLAMExample.cpp  Pose2SLAMExampleExpressions.cpp  Pose2SLAMExample_g2o.cpp  Pose2SLAMExample_graph.cpp  Pose2SLAMExample_graphviz.cpp  Pose2SLAMExample_lago.cpp  Pose2SLAMStressTest.cpp  Pose2SLAMwSPCG.cpp  Pose3Localization.cpp  Pose3SLAMExampleExpressions_BearingRangeWithTransform.cpp  Pose3SLAMExample_changeKeys.cpp  Pose3SLAMExample_g2o.cpp  Pose3SLAMExample_initializePose3Chordal.cpp  Pose3SLAMExample_initializePose3Gradient.cpp  RangeISAMExample_plaza2.cpp  SFMExample.cpp  SFMExampleExpressions.cpp  SFMExampleExpressions_bal.cpp  SFMExample_SmartFactor.cpp  SFMExample_SmartFactorPCG.cpp  SFMExample_bal.cpp  SFMExample_bal_COLAMD_METIS.cpp  (+16 more)
gtsam/: BUILD  CMakeLists.txt  config.h  dllexport.h  global_includes.h  gtsam.i  precompiled_header.h
gtsam_unstable/: gtsam_unstable.i
python/: .gitignore  CMakeLists.txt  (+2 more)
(+1027 files in other folders)
