##########
#
# NANOBIND
#

bazel_dep(name = "nanobind_bazel", version = "2.2.0", dev_dependency = True)

##########
#
# PYTHON
#

bazel_dep(name = "rules_python", version = "0.40.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")

##########
#
# EIGEN
#

bazel_dep(name = "eigen", version = "4.0.0-20241125")
